# siilats-target-mysql

./: README.md  pyproject.toml
target_mssql/tests/: test_core.py
target_mysql/: streams.py  target.py
target_mysql/tests/: test_core.py
