[tool.poetry]
name = "target-mysql"
version = "0.0.1"
description = "`target-mysql` is Singer tap for MySQL, built with the Singer SDK."
authors = ["Keith Siilats", "Derek Visch"]
license = "MIT"

[tool.poetry.dependencies]
python = "<3.9,>=3.6"
pipelinewise-singer-python = "1.2.0"
jsonschema = "3.2.0"
click = "^7.1.2"
requests = "^2.25.1"
simplejson = "3.11.1"
pyodbc = "4.0.30"
pylint = "^2.8.2"
python-dateutil = "2.8.1"
[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-mysql = 'target_mysql.target:cli'
